--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,7 +20,7 @@ body {
 }
 
 .container{
-    max-width: 1390px;
+    max-width: 1407px;
     padding: 0 1rem;
     margin: 0 auto;
 }
@@ -36,11 +36,11 @@ body {
 }
 
 .s-block{
-    margin: 5rem 0 10.625rem;
+    margin: 5rem 0 12.025rem;
 }
 
 .header{
-    height: 5.6rem;
+    height: 90px;
     background-color: transparent;
     position: relative;
     margin-left: 4.5rem;
@@ -114,7 +114,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: calc(100% - 5.9rem);
+    height: calc(100% - 95px);
     margin-left: 3.6rem;
 }
 .preview__content{
@@ -206,7 +206,7 @@ body {
 }
 .preview__img img {
     display: block;
-    min-width: 36.8rem;
+    min-width: 588px;
     height: auto;
 }
 
@@ -220,9 +220,9 @@ body {
 }
 
 .about__images{
-    margin-right: 5.5rem;
+    margin-right: 4.6rem;
     margin-left: 3rem;
-    max-width: 454px;
+    max-width: 467px;
     min-width: 360px;
     /* height: 510px; */
 }
@@ -249,6 +249,7 @@ body {
     line-height: 1.3;
     color: #595757;
     padding-bottom: 2.6rem;
+    margin-right: 1rem;
 }
 .about__content .about__box > p{
     padding-bottom: 0;
