--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -12,6 +12,15 @@
 }
 
 @media screen and (max-width: 1200px){
+    .s-block {
+        margin: 4rem 0 8.025rem;
+    }
+    
+    .section-title{
+        font-size: 3.6rem;
+        margin: 0 0 4rem 0;
+    }
+
     .preview{
         height: 700px;
     }
@@ -37,13 +46,15 @@
     }
 
     .about__images{
-        /* margin-left: 2rem;
-        margin-right: 4rem; */
         min-width: 270px;
+        max-width: 300px;
+        margin-right: 3rem;
+        margin-left: 1.5rem;
     }
     .about__content > p, .about__content > .about__box > p {
         font-size: 1.2rem;
         padding-bottom: 1.6rem;
+        margin-right: 0;
     }
     .about__box{
         flex-direction: column;
