--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,7 +36,7 @@ body {
 }
 
 .s-block{
-    margin: 5rem 0 12.025rem;
+    margin: 5rem 0 9.725rem;
 }
 
 .header{
@@ -114,7 +114,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: calc(100% - 95px);
+    height: calc(100% - 90px);
     margin-left: 3.6rem;
 }
 .preview__content{
@@ -254,7 +254,7 @@ body {
 .about__content .about__box > p{
     padding-bottom: 0;
     width: 60%;
-    margin-right: 1rem;
+    margin-right: 0.5rem;
 }
 
 .about__box{
@@ -295,7 +295,7 @@ body {
     left: 1rem;
 }
 .section-title--ml{
-    margin-left: 2.2rem;
+    margin-left: 1.7rem;
 }
 
 .tabs__header{
@@ -332,7 +332,7 @@ body {
     display: flex;
 
     /* Убрать */
-    height: 1175px;
+    height: 1204px;
     width: 100%;
     background-color: red;
 }
@@ -368,14 +368,13 @@ body {
     padding-bottom: 1.5rem;
 }
 .stages__img{
-    width: 520px;
-    height: 520px;
     margin-right: 2rem;
 }
 .stages__img img {
-    min-width: 100%;
     display: block;
-    height: 100%;
+    width: 520px;
+    height: 520px;
+    object-fit: cover;
     border-radius: 50%;
 }
 .stages__content {
