--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -4,11 +4,57 @@
     }
 }
 
-@media screen and (max-width: 1400px){
+@media screen and (max-width: 1450px){
+    .stages-item:nth-child(odd){
+        margin-left: 0;
+    }
+}
+
+@media screen and (max-width: 1400px){    
     .review__slider {
         height: auto;
         padding-bottom: 6rem;
     }
+
+    .stages__img img{
+        width: 360px;
+        height: 360px;
+    }
+    .stages-item:nth-child(3n + 2) .stages__content, 
+    .stages-item:nth-child(3n + 3) .stages__content{
+        margin-top: 0;
+    }
+    .stages__img{
+        margin-right: 0;
+    }
+    .stages__content,
+    .stages-item:nth-child(even) .stages__img{
+        margin-left: 0;
+    }
+    .stages__box p{
+        font-size: 1.5rem;
+    }
+    .stages__box,
+    .stages-item:nth-child(3n + 2) .stages__box,
+    .stages-item:nth-child(3n + 3) .stages__box {
+        padding: 1.5rem;
+    }
+    .stages-item:nth-child(3n + 1) .stages__title,
+    .stages-item:nth-child(3n + 2) .stages__title{
+        padding-right: 5rem
+    }
+    .stages__content{
+        margin-bottom: 0;
+    }
+    .stages__title{
+        font-size: 2.6em;
+        white-space: normal;
+    }
+    .stages-item{
+        justify-content: space-around;
+        gap: 2rem;
+    }
+
 }
 
 @media screen and (max-width: 1200px){
@@ -70,6 +116,18 @@
         align-items: center;
     }
 
+}
+
+@media screen and (max-width: 1000px){
+    .stages-item,
+    .stages-item:nth-child(even){
+        flex-direction: column;
+        gap: 0;
+    }
+    .stages__content{
+        max-width: 100%;
+    }
+    
 }
 
 @media screen and (max-width: 768px){
