--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,10 +1,20 @@
-@media screen and (max-width: 1600px){
-    .swiper-navigation{
+@media screen and (max-width: 1500px){
+    /* .swiper-navigation{
         display: none;
-    }
+    } */
 }
 
 @media screen and (max-width: 1450px){
+    .slider-arrow-prev, .slider-arrow-next{
+        width: 45px;
+        height: 45px;
+    }
+    .slider-arrow-prev {
+        right: 1.075rem;
+    }
+    .slider-arrow-next {
+        left: 1.075rem;
+    }
     .stages-item:nth-child(odd){
         margin-left: 0;
     }
@@ -57,9 +67,27 @@
 
 }
 
+@media screen and (max-width: 1300px){
+    .contacts__title {
+        font-size: 2rem;
+    }
+    .contacts__suptitle{
+        font-size: 1.5rem;
+    }
+    .slider-arrow-next {
+        left: 0.775rem;
+    }
+    .slider-arrow-next {
+        left: 0.775rem;
+    }
+}
+
 @media screen and (max-width: 1200px){
     .s-block {
-        margin: 4rem 0 8.025rem;
+        margin: 4rem 0 5rem;
+    }
+    .swiper-navigation{
+        display: none;
     }
 
     .section-title{
@@ -115,7 +143,17 @@
     .about__inner{
         align-items: center;
     }
+    .contacts__img{
+        margin-right: 0;
+    }
 
+    .stages-item:last-child,
+    .stages{
+        padding-bottom: 0;
+    }
+    .review__inner{
+        padding-bottom: 0;
+    }
 }
 
 @media screen and (max-width: 1000px){
@@ -127,10 +165,62 @@
     .stages__content{
         max-width: 100%;
     }
-    
+    .contacts__img{
+        display: none;
+    }
+    .contacts__box{
+        width: 100%;
+    }
+    .services__inner{
+        padding: 0;
+    }
+
+    .form{
+        width: auto;
+    }
+    .tabs__header{
+        flex-direction: column;
+        width: 100%;
+    }
+    .tabs-work{
+        margin-bottom: 0.5rem;
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 768px){
+    .section-title {
+        font-size: 3rem;
+        margin: 0 0 2rem 0;
+    }
+    .about{
+        padding: 0;
+    }
+    .s-block {
+        margin: 2rem 0 4rem;
+    }
+    .preview {
+        height: 500px;
+    }
+    .stages__title {
+        font-size: 1.6em;
+    }
+    .stages__box p {
+        font-size: 1rem;
+    }
+    .stages-item{
+        margin-bottom: 2rem;
+    }
+    .stages__img img {
+        width: 290px;
+        height: 290px;
+    }
+    .about__inner{
+        flex-direction: column;
+    }
+    .about__images{
+        margin: 0 0 2rem 0;
+    }
     .preview__img{
         display: none;
     }
@@ -138,6 +228,172 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        width: 100%;
+    }
+    .services__inner{
+        gap: 3rem;
+    }
+    .services__title{
+        font-size: 1.6rem;
+    }
+    .services__btn,
+    .preview__btn,
+    .contacts__btn{
+        height: 45px;
+        line-height: 45px;
+        padding: 0 2rem;
+        font-size: 1rem;
+    }
+    .preview__btn::before{
+        bottom: calc(-50% + 1px);
+    }
+    .services__btn::before{
+        right: -20%;
+        bottom: -50%
+    }
+    .contacts__btn::before{
+        right: -22%;
+        bottom: -50%;
+    }
+    .contacts__btn::before,
+    .services__btn::before,
+    .preview__btn::before{
+        width: 90px;
+        height: 90px;
+    }
+    .preview__btn::after{
+        width: 70px;
+        height: 8px;
+        right: -50px;
+    }
+    .services__btn::after{
+        width: 70px;
+        height: 15px;
+        right: -50px;
+        bottom: calc(50% - 12px);
+        background-size: contain;
+    }
+    .contacts__btn::after{
+        background-image: url(../img/arrow3.png);
+        width: 85px;
+        height: 11px;
+        bottom: calc(50% - 5px);
+    }
+    .services__inner .services__item{
+        height: 180px;
+        flex: 1 1 calc((100%/3));
+    }
+    .preview__title {
+        font-size: 2.8rem;
+        margin-bottom: 1rem;
+    }
+    .preview__text {
+        margin-bottom: 3.6rem;
+    }
+    .review__item{
+        height: auto;
+        padding-top: 60px;
+    }
+    .review__slider{
+        width: 100%;
+    }
+    .review__text{
+        margin-bottom: 1rem;
+    }
+    .review__text{
+        font-size: 1.2rem;
+    }
+    .review__author{
+        font-size: 1.6rem;
+        padding-bottom: 0;
+    }
+    .swiper-pagination-bullet{
+        width: 24px;
+        height: 24px;
+    }
+    .review__slider {
+        padding-bottom: 4.5rem;
+    }
+    .swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet{
+        margin: 0 0.75rem;
+    }
+    .review__img img{
+        width: 100px;
+        height: 100px;
+    }
+    .review__img{
+        top: calc(-100px/2);
+    }
+    .form{
+        padding: 2rem;
+        height: auto;
+    }
+    .form-box{
+        flex-direction: column;
+        gap: 1rem;
+        margin-bottom: 2rem;
+    }
+    .form-textarea{
+        margin-bottom: 3rem;
+    }
+    .form-input{
+        font-size: 1rem;
+        height: 2rem;
+    }
+    .form-textarea{
+        font-size: 1rem;
+        padding: 0.7rem;
+    }
+    .contacts__title {
+        font-size: 1.6rem;
+        margin-bottom: 1rem;
+    }
+    .contacts__suptitle {
+        font-size: 1rem;
+    }
+    .contacts .section-title,
+    .services .section-title {
+        margin-bottom: 2rem;
+    }
+    .tabs-work{
+        font-size: 1.2rem;
+        padding-bottom: 0.4rem;
+    }
+
+}
+
+@media screen and (max-width: 375px){
+    .logo-line,
+    .logo-suptitle{
+        display: none;  
+    }
+    .section-title {
+        font-size: 2.2rem
+    }
+    .stages__img img {
+        width: 150px;
+        height: 150px;
+    }
+    .stages-item:nth-child(3n + 1) .stages__title, .stages-item:nth-child(3n + 2) .stages__title{
+        padding-right: 1rem;
+        margin-right: 1rem;
+    }
+    .stages-item:nth-child(3n + 3) .stages__title {
+        padding-right: 0;
+    }
+    .stages__title{
+        text-align: left;
+    }
+    .services__item{
+        padding: 2rem 1rem;
+    }
+    .review__slider {
+        padding-bottom: 5.5rem;
+    }
+    .s-block {
+        margin: 2rem 0 3rem;
+    }
+    .contacts__inner{
         width: 100%;
     }
 }
